--- a/style_1.css
+++ b/style_1.css
@@ -11,6 +11,7 @@ body{
     overflow: hidden;
 }
 
+/* Navigation  */
 .container{
     width:100%;
     min-height:100vh;
@@ -64,6 +65,7 @@ nav{
     margin: 25px 10px;
 }
 
+/* Body  */
 .wrapper{
     display: flex;
     width: 100%;
@@ -73,7 +75,7 @@ nav{
     padding: 0 10%;
     overflow:hidden;
 }
-
+/* Die Kreise  */
 .wrapper::before{
     position: absolute;
     content: '';
@@ -98,6 +100,7 @@ nav{
     animation: object2 6s linear infinite;
 }
 
+/* Die Animation der Kreise */
 @keyframes object1{
     50%{
         left: -13%;
@@ -121,7 +124,8 @@ nav{
     width: 50%;
 }
 
-.topline{
+/* Überschrift */
+.headline{
     display: block;
     position:relative ;
     font-size:35px;
@@ -129,25 +133,21 @@ nav{
     color: #3d535f;
 }
 
-.topline::after{
+/* .headline::after{
     position: absolute;
     content: '';
     height: 4px;
     width: 45px;
     bottom: 10px;
     background-color: #0a9487;
-}
+} */
 
+/* Text */
 h1{
     display: block;
-    font-size: 6em;
+    font-size: 7em;
     font-weight: 900;
     color:#3d535f;
-}
-
-.multiText{
-    color: #0a9487;
-    text-transform: capitalize;
 }
 
 p{
@@ -157,6 +157,7 @@ p{
     color: #3d535f;
 }
 
+/* Button style */
 .btns{
     width: 100%;
     position: relative;
@@ -182,47 +183,9 @@ button:hover{
     background-color: #0a9487;
 }
 
-.imgbox{
-    position: relative;
-    width:100%;
-    height: 100%;
-}
-
-.imgbox img{
-    position: relative;
-    height:100%;
-    width:calc(100% - 90px);
-    top: -100px;
-    right: 50px;
-    transform: rotateY(180deg);
-    animation: animateUser 4s linear infinite;
-}
-@keyframes animateUser {
-    50%{
-        right: 30px;
-        top: -90px;
-    }
-}
-
-.imgbox #splash{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) rotate(-35deg);
-    width: 150%;
-    filter: saturate(200%);
-    animation: animate 4s linear infinite;
-}
-
-@keyframes animate {
-    50%{
-        top: 49%;
-        left: 51%;
-        width: 155%;
-    }
-}
- /* The dropdown container */
- .dropdown {
+ 
+  /* The dropdown container */
+  .dropdown {
     float: left;
     overflow: hidden;
   }
