--- a/style_1.css
+++ b/style_1.css
@@ -8,7 +8,7 @@
 }
 
 body{
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 /* Navigation  */
@@ -69,11 +69,11 @@ nav{
 .wrapper{
     display: flex;
     width: 100%;
-    height: calc(100vh - 80px);
+    height: 100%;
     justify-content: center;
     align-items: center;
     padding: 0 10%;
-    overflow:hidden;
+    overflow: hidden;
 }
 /* Die Kreise  */
 .wrapper::before{
@@ -88,7 +88,7 @@ nav{
     animation: object1 6s linear infinite;
 }
 
-.wrapper::after{
+/* .wrapper::after{
     position: absolute;
     content: '';
     height: 200px;
@@ -98,7 +98,7 @@ nav{
     top: 12%;
     background: linear-gradient(45deg,#043e38, #0a9487);
     animation: object2 6s linear infinite;
-}
+} */
 
 /* Die Animation der Kreise */
 @keyframes object1{
@@ -108,12 +108,12 @@ nav{
     }
 }
 
-@keyframes object2{
+/* @keyframes object2{
     50%{
         left: 35%;
         top: 10%;
     }
-}
+} */
 
 .cols0{
     width: 60%;
@@ -126,8 +126,9 @@ nav{
 
 /* Überschrift */
 .headline{
+    padding: 30px 0;
+    position:absolute;
     display: block;
-    position:relative ;
     font-size:35px;
     letter-spacing: 5px;
     color: #3d535f;
@@ -150,15 +151,20 @@ h1{
     color:#3d535f;
 }
 
-p{
+p{  position: relative;
+    top: 80px;
+    margin: 10px;
     display: block;
     width: 90%;
     font-size: 1.2em;
     color: #3d535f;
 }
-
+b{
+    font-size: 1.5;
+    letter-spacing: 2px;
+}
 /* Button style */
-.btns{
+/* .btns{
     width: 100%;
     position: relative;
     left: 150px;
@@ -177,11 +183,11 @@ button{
     letter-spacing: 2px;
     text-transform: capitalize;
     box-shadow: 0 15px 10px rgba(0, 0, 0, 0.4);
-}
+} */
 
-button:hover{
+/* button:hover{
     background-color: #0a9487;
-}
+} */
 
  
   /* The dropdown container */
@@ -231,3 +237,8 @@ button:hover{
   .dropdown:hover .dropdown-content {
     display: block;
   }
+ img{
+    padding: 15px 0px;
+    margin: 5px;
+
+ }
