--- a/style_1.css
+++ b/style_1.css
@@ -69,7 +69,7 @@ nav{
 .wrapper{
     display: flex;
     width: 100%;
-    height: 100%;
+    height:100%;
     justify-content: center;
     align-items: center;
     padding: 0 10%;
@@ -190,8 +190,8 @@ button{
 } */
 
  
-  /* The dropdown container */
-  .dropdown {
+ /* The dropdown container */
+ .dropdown {
     float: left;
     overflow: hidden;
   }
@@ -215,11 +215,11 @@ button{
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+    z-index: 120;
   }
   
   /* Links inside the dropdown */
-  .dropdown-content a {
+  .dropdown-content a{
     float: none;
     color: black;
     padding: 12px 16px;
@@ -237,6 +237,7 @@ button{
   .dropdown:hover .dropdown-content {
     display: block;
   }
+
  img{
     padding: 15px 0px;
     margin: 5px;
@@ -252,4 +253,12 @@ button{
 
  footer p{
     text-align: left;
+ }
+
+ .wrapper i{
+    display: inline;
+    font-size: 1em;
+    float: right;
+    right: -40%;
+    padding: 0px 5px;
  }
