--- a/style_1.css
+++ b/style_1.css
@@ -243,16 +243,25 @@ button{
     margin: 5px;
 
  }
- footer{
-    height: 90px;
-    background: color #f3f5f8;
+
+ footer {
     width: 100%;
-    padding: 15px;
-    text-align: center;
+    display: block;
+    max-height: 60px;
+ }
+
+ footer div{
+    height: 50px;
+    background-color:  #f3f5f8;
+    width: 100%;
+    padding: 3px 40px;
+    text-align: right;
  }
 
  footer p{
     text-align: left;
+    position: relative;
+    top: 75px;
  }
 
  .wrapper i{
@@ -262,3 +271,13 @@ button{
     right: -40%;
     padding: 0px 5px;
  }
+
+.links_footer a:hover {
+   color: #0a9487;
+ }
+
+.links_footer a{
+    font-size: 30px;
+    color: #3d535f;
+    margin: 25px 10px;
+}
