--- a/style_1.css
+++ b/style_1.css
@@ -9,13 +9,14 @@
 
 body{
     overflow-x: hidden;
+    background-color: #f3f5f8;
 }
 
 /* Navigation  */
 .container{
     width:100%;
     min-height:100vh;
-    background: color #f3f5f8;
+    background-color: #f3f5f8;
 }
 
 nav{
@@ -25,6 +26,9 @@ nav{
     height: 80px;
     z-index: 111;
     margin: 20px;
+    padding: 0;
+    margin: 0;
+    background-color:  #f3f5f8;
 }
 
 .logo{
@@ -35,10 +39,12 @@ nav{
     letter-spacing: 3px;
     cursor: pointer;
     text-transform: uppercase;
+    padding: 10px;
 }
 
 .navItems{
     display: flex;
+    padding: 20px;
 }
 
 .navItems li{
@@ -58,6 +64,10 @@ nav{
 .links a:hover {
    color: #0a9487;
  }
+
+.links{
+    padding: 10px;
+}
 
 .links a{
     font-size: 40px;
@@ -121,7 +131,7 @@ nav{
 }
 
 .cols{
-    width: 50%;
+    width: 60%;
 }
 
 /* Überschrift */
@@ -155,6 +165,7 @@ p{  position: relative;
     top: 80px;
     margin: 10px;
     display: block;
+    text-align: justify;
     width: 90%;
     font-size: 1.2em;
     color: #3d535f;
@@ -238,30 +249,34 @@ button{
     display: block;
   }
 
- img{
+ p img{
     padding: 15px 0px;
     margin: 5px;
-
+    align-items: center;
  }
 
  footer {
     width: 100%;
     display: block;
-    max-height: 60px;
+    max-height: 90px;
+
  }
 
  footer div{
-    height: 50px;
-    background-color:  #f3f5f8;
+    height: 80px;
+    background-color: #043e38;
     width: 100%;
-    padding: 3px 40px;
+    padding: 20px 40px;
     text-align: right;
+    color: #f3f5f8;
  }
 
  footer p{
     text-align: left;
     position: relative;
-    top: 75px;
+    top: 90px;
+    padding-left: 27px;
+    color: #b3b4b6;
  }
 
  .wrapper i{
@@ -280,4 +295,5 @@ button{
     font-size: 30px;
     color: #3d535f;
     margin: 25px 10px;
+    color: #f3f5f8;
 }
