--- a/style_1.css
+++ b/style_1.css
@@ -168,7 +168,7 @@ p{  position: relative;
     text-align: justify;
     width: 90%;
     font-size: 1.2em;
-    color: #3d535f;
+    color: #2a3a42;
 }
 b{
     font-size: 1.5;
